--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <h2>Our Design</h2>
 
+    <!--
     <img src="app/src/main/res/drawable/register.jpg" alt="test 61" width="25%">
     <p>Display: Register Page</p>
 
@@ -26,6 +27,23 @@
 
     <img src="app/src/main/res/drawable/menu.jpg" alt="test 61" width="25%">
     <p>Display: Menu Page</p>
+
+    -->
+
+    <div class="row">
+        <div class="column">
+            <img src="app/src/main/res/drawable/register.jpg" alt="test 61" width="25%">
+            <p>Display: Register Page</p>
+        </div>
+        <div class="column">
+            <img src="app/src/main/res/drawable/home.jpg" alt="test 61" width="25%">
+            <p>Display: Home Page</p>
+        </div>
+        <div class="column">
+            <img src="app/src/main/res/drawable/menu.jpg" alt="test 61" width="25%">
+            <p>Display: Menu Page</p>
+        </div>
+      </div>
 
 <h2>Why We Want You To Use Our App</h2>
 
