--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
     allow users to conveniently select a drink, and modify the drink to the
     users preference. The application will allow the user to place the order
     in real time, sending the order to the store, and notifying the user of
-    the drinks order upon completion.</p>
+    the drinks order upon completion.
+
+    Carolina Coffee was designed by the following developers of Capstone22:
+    Caleb Howard
+    Brian Rovelli
+    Christopher Wynne
+    Westen Wingard
+
+    To learn more about the developers, please check out our LinkedIn accounts as well as our Github Page!
+
+</p>
 
 
 <h2>Our Design</h2>
