--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
 
     <div class="row">
         <div class="column">
-            <img src="app/src/main/res/drawable/register.jpg" alt="test 61" width="25%">
-            <p>Display: Register Page</p>
+            <img src="app/src/main/res/drawable/register.jpg" alt="test 61" width="100%">
+            <h2>Display: Register Page</h2>
         </div>
         <div class="column">
-            <img src="app/src/main/res/drawable/home.jpg" alt="test 61" width="25%">
-            <p>Display: Home Page</p>
+            <img src="app/src/main/res/drawable/home.jpg" alt="test 61" width="100%">
+            <h2>Display: Home Page</h2>
         </div>
         <div class="column">
-            <img src="app/src/main/res/drawable/menu.jpg" alt="test 61" width="25%">
-            <p>Display: Menu Page</p>
+            <img src="app/src/main/res/drawable/menu.jpg" alt="test 61" width="100%">
+            <h2>Display: Menu Page</h2>
         </div>
       </div>
 
