--- a/index.html
+++ b/index.html
@@ -57,7 +57,17 @@
 
 <h2>Why We Want You To Use Our App</h2>
 
-    <p> Pending Description</p>
+    <p> Physical Device Deployement:
+        1.
+        2.
+        3.
+    </p>
+
+<p> Emulator Deployment:
+        1.
+        2.
+        3.
+</p>
 
 <h2>Instructions</h2>
 
