--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     Christopher Wynne
     Westen Wingard
 
-    To learn more about the developers, please check out our LinkedIn accounts as well as our Github Page!
+    To learn more about the developers, please check out our <a href="google.com">LinkedIn</a> accounts as well as our Github Page!
  
 </p>
 
