--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     Christopher Wynne
     Westen Wingard
 <br><br>
-    To learn more about the developers, please check out our <a href="google.com">LinkedIn</a> accounts as well as our Github Page!
+    To learn more about the developers, please check out our <a href="#linkedin">LinkedIn</a> accounts as well as our Github Page!
  
 </p>
 
@@ -85,7 +85,7 @@
 </div>
 
 
-<h4>Find Us On LinkedIn!</h4>
+<h4 id="linkedin">Find Us On LinkedIn!</h4>
 <div class="footer">
     <p>
         <button style="font-size:14px">
