--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     in real time, sending the order to the store, and notifying the user of
     the drinks order upon completion.
 <br><br>
-    Carolina Coffee was designed by the following developers of Capstone22:
-    Caleb Howard
-    Brian Rovelli
-    Christopher Wynne
+    Carolina Coffee was designed by the following developers of Capstone22:<br>
+    Caleb Howard<br>
+    Brian Rovelli<br>
+    Christopher Wynne<br>
     Westen Wingard
 <br><br>
     To learn more about the developers, please check out our <a href="#linkedin">LinkedIn</a> accounts as well as our Github Page!
