--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     Christopher Wynne<br>
     Westen Wingard
 <br><br>
-    To learn more about the developers, please check out our <a href="#linkedin">LinkedIn</a> accounts as well as our <a href="https://github.com/SCCapstone/capstone22"Github</a> Page!
+    To learn more about the developers, please check out our <a href="#linkedin">LinkedIn</a> 
+    accounts as well as our <a href="https://github.com/SCCapstone/capstone22">Github</a> Page!
  
 </p>
 
