--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
       </div>
 
 <h2>Why We Want You To Use Our App</h2>
+    <p> We want you to use Carolina Coffee because it is very user-friendly. Lots of users 
+        will find that some coffee apps are overwhelming and difficult to use. Our app 
+        provides a simplistic view that users can understand and quickly order their coffee.
+        The process of ordering is as simple as viewing our menu, selecting the coffee you 
+        want, customizing your drink, and then ordering! Our app provides a rewards system 
+        that offers you $5 after 4 orders (1 point per order). After you receive 4 points 
+        you can claim a $5 coupon that can be applied to your cart total at checkout. 
+        Our menu includes a wide variety of coffee such as regular coffee, café americanos, 
+        lattes, macchiatos, cappucinos, and frappuccinos. 
+    </p>
 
     <p> Physical Device Deployement:
         1.
