--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 </div>
 
 <footer>
-	<p>This project is maintained by SCCapstone © 2022</p>
+	This project is maintained by SCCapstone © 2022
 </footer>
 </html>
  
