--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 </div>
 
 <footer>
-	This project is maintained by SCCapstone © 2022
+	<f1>This project is maintained by SCCapstone © 2022</f1>
 </footer>
 </html>
  
