--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 </div>
 
 <footer>
-	<f1>This project is maintained by SCCapstone © 2022</f1>
+	<f1>This project is maintained by SCCapstone Copyright © 2021 - 2021 Carolina Coffee</f1>
 </footer>
 </html>
  
