--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
 
 <footer>
 	<f1>This project is maintained by SCCapstone Copyright © 2021 - 2022 Carolina Coffee</f1>
+	<br>
+	Hosted on GitHub Pages using the _____________ theme
 </footer>
 </html>
  
