--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <footer>
 	<f1>This project is maintained by SCCapstone Copyright © 2021 - 2022 Carolina Coffee</f1>
 	<br>
-	Hosted on GitHub Pages using the _____________ theme
+	<f1>Hosted on GitHub Pages using the _____________ theme</f1>
 </footer>
 </html>
  
