--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
       </div>
 
-<h2>Why We Want You To Use Our App</h2>
+<h2>How Our App Can Be Used</h2>
     <p> We want you to use Carolina Coffee because it is very user-friendly. Lots of users 
         will find that some coffee apps are overwhelming and difficult to use. Our app 
         provides a simplistic view that users can understand and quickly order their coffee.
@@ -69,20 +69,7 @@
     </p>
 
 
-<h2>Instructions</h2>
 
-    <p> Pending Instructions...</p>
-<p> Physical Device Deployement:
-    <br>1.
-    <br>2.
-    <br>3.
-</p>
-
-<p> Emulator Deployment:
-    <br>1.
-    <br>2.
-    <br>3.
-</p>
 
 <h2>Final Demo</h2>
     <p>Below please find the attached Final Demo for this application:</p>
