Fixed wrong name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <br><br>
     Carolina Coffee was designed by the following developers of Capstone22:<br>
     Caleb Howard<br>
-    Brian Rovelli<br>
+    Briana Rovelli<br>
     Christopher Wynne<br>
     Westen Wingard
 <br><br>
