--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
       </div>
 
-<h2>How Our App Can Be Used</h2>
+<h2>Why How Our App Can Be Used</h2>
     <p> We want you to use Carolina Coffee because it is very user-friendly. Lots of users 
         will find that some coffee apps are overwhelming and difficult to use. Our app 
         provides a simplistic view that users can understand and quickly order their coffee.
