--- a/index.html
+++ b/index.html
@@ -120,3 +120,7 @@
 <head>
     <about>HTML Links</about>
 </head>
+<body>
+<h1>Reach us here</h1>
+<a href="https://github.com/SCCapstone/capstone22/blob/main/about.html">Contact</a>
+</body>
