--- a/index.html
+++ b/index.html
@@ -122,5 +122,5 @@
 </head>
 <body>
 <h1>Reach us here</h1>
-<a href="https://github.com/SCCapstone/capstone22/blob/main/about.html">Contact</a>
+<a href="about.html">Contact</a>
 </body>
