--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <div class = "appHeader">
     <h1>Carolina Coffee</h1>
 </div>
-<h2>About</h2>
+<h2>Carolina Coffee</h2>
 <p>
     The Carlina Coffee Application is a user friendly application that will
     allow users to conveniently select a drink, and modify the drink to the
@@ -82,45 +82,8 @@
 </div>
 </div>
 
-
-<h4 id="linkedin">Find Us On LinkedIn!</h4>
-<div class="footer">
-    <p>
-        <button style="font-size:14px">
-            <a href="https://www.linkedin.com/in/caleb-h-b449b8166/" target="_blank">
-                Caleb (Allen) Howard<i class="linkedin-square"></i>
-            </a>
-        </button>
-        <button style="font-size:14px">
-            <a href="https://www.linkedin.com/in/westen-wingard/" target="_blank">
-                Westen Wingard<i class="fa fa-linkedin-square"></i>
-            </a>
-        </button>
-        <button style="font-size:14px">
-            <a href="https://www.linkedin.com/in/briana-rovelli/" target="_blank">
-                Briana Rovelli<i class="fa fa-linkedin-square"></i>
-            </a>
-        </button>
-        <button style="font-size:14px">
-            <a href="https://www.linkedin.com/in/christopher-wynne-8a7054230/" target="_blank">
-                Christopher Wynne<i class="fa fa-linkedin"></i>
-            </a>
-        </button>
-    </p>
-</div>
-<br><br>
-<footer>
-	<f1>This project is maintained by SCCapstone Copyright © 2021 - 2022 Carolina Coffee</f1>
-	<br><br>
-	<f1>Hosted on GitHub Pages</f1>
-</footer>
-</html>
-
-<html>
-<head>
-    <about>HTML Links</about>
-</head>
 <body>
 <h1>Reach us here</h1>
 <a href="about.html">Contact</a>
 </body>
+</html>
