--- a/index.html
+++ b/index.html
@@ -86,4 +86,11 @@
 <h1>Reach us here</h1>
 <a href="about.html">Contact</a>
 </body>
+
+<footer>
+    <f1>This project is maintained by SCCapstone Copyright © 2021 - 2022 Carolina Coffee</f1>
+    <br><br>
+    <f1>Hosted on GitHub Pages</f1>
+</footer>
+
 </html>
