--- a/index.html
+++ b/index.html
@@ -14,16 +14,6 @@
     users preference. The application will allow the user to place the order
     in real time, sending the order to the store, and notifying the user of
     the drinks order upon completion.
-<br><br>
-    Carolina Coffee was designed by the following developers of Capstone22:<br>
-    Caleb Howard<br>
-    Briana Rovelli<br>
-    Christopher Wynne<br>
-    Westen Wingard
-<br><br>
-    To learn more about the developers and our product, please check out our <a href="#linkedin">LinkedIn</a>
-    accounts as well as our <a href="https://github.com/SCCapstone/capstone22">Github</a> Page!
- 
 </p>
 
 
@@ -83,10 +73,10 @@
 </div>
 
 <body>
-<h1>Reach us here</h1>
-<a href="about.html">Contact</a>
+<h2>Reach us here</h2>
+<a href="about.html">About</a>
 </body>
-
+<br><br>
 <footer>
     <f1>This project is maintained by SCCapstone Copyright © 2021 - 2022 Carolina Coffee</f1>
     <br><br>
