--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </div>
 <h2>Carolina Coffee</h2>
 <p>
-    The Carlina Coffee Application is a user friendly application that will
+    The Carlina Coffee Application is a user-friendly application that will
     allow users to conveniently select a drink, and modify the drink to the
     users preference. The application will allow the user to place the order
-    in real time, sending the order to the store, and notifying the user of
+    in real-time, sending the order to the store, and notifying the user of
     the drinks order upon completion.
 </p>
 
